added verify email API
